service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prestashop-landing-page-service
spec:
  selector:
    app: prestashop-landing-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 88
  type: NodePort
