prestashop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prestashop-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: prestashop.landing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prestashop-landing-page-service
            port:
              number: 88
